--- a/index.html
+++ b/index.html
@@ -50,6 +50,26 @@
   </div>
 
   <!-- Sección de la cuenta atrás antes de mostrar las imágenes -->
+  <div id="countdown-screen" class="screen">
+      <h1>¡Felicidades!</h1>
+      <p>🎉 ¡Has completado la aventura! 🎉</p>
+      <p>YA ESTA LA CUENTA ATRÁS</p>
+      <p>🎁 ¡Espero que te guste! 🎁</p>
+      <div id="countdown" class="countdown">10</div>
+  </div>
+
+  
+  <div id="duki-screen" class="screen">
+    <h1 class="images-title">𓆩𓆪 ¡Entradas para Duki! 𓆩𓆪 </h1>
+        <div class="images">
+          <div class="image hidden" id="image1">
+            <img class="entrada" src="assets/1.png" alt="Entrada 1">
+          </div>
+          <div class="image hidden" id="image2">
+            <img class="entrada" src="assets/2.png" alt="Entrada 2">
+          </div>
+        </div>
+  </div>
 
 
   <!-- Scripts -->
