--- a/index.html
+++ b/index.html
@@ -17,15 +17,30 @@
 
   <!-- Pantalla de Inicio -->
   <div id="start-screen" class="screen active">
-    <h1>¡Bienvenida!</h1>
-    <p>👀 ¿Estás lista para comenzar tu aventura? 👀</p>
+    <h1>Una aventura te espera</h1>
+    <p>👀 ¿Estás lista para comenzarla? 👀</p>
     <button id="comenzar" onclick="startGame()">Comenzar</button>
   </div>
 
   <div id="intro-screen" class="screen">
     <div class="intro-content">
-      <h1 class="intro-title">¡Bienvenida a la Aventura de las Letras!</h1>
-      <div id="intro-text" class="intro-text"></div>
+      <h1 class="intro-title">¡Bienvenida al camino hacia tu regalo!</h1>
+      <div id="intro-text" class="intro-text">
+        <p>
+          Prepárate para un emocionante desafío de conocimiento. 
+          Responderás preguntas cuidadosamente seleccionadas, estate atenta,
+          porque puede que te ofrezcan datos para resolver el acertijo final.
+        </p>
+        <p>
+          Debes descubrir la palabra secreta que te permitirá acceder al regalo de Navidad.
+        </p>
+        <p>
+          Si consigues contestar a todo correctamente...
+        </p>
+        <p>
+          🎄 ¿Estás lista para encontrar tu regalo de Navidad? 🎄`;
+        </p>
+      </div>
       <button class="button" onclick="startQuestions()">¡Estoy lista!</button>
     </div>
   </div>
@@ -53,14 +68,22 @@
   <div id="countdown-screen" class="screen">
       <h1>¡Felicidades!</h1>
       <p>🎉 ¡Has completado la aventura! 🎉</p>
-      <p>YA ESTA LA CUENTA ATRÁS</p>
-      <p>🎁 ¡Espero que te guste! 🎁</p>
+      <p>⌛ YA ESTÁ LA CUENTA ATRÁS ⌛</p>
+      <p>🎁 ¡Espero que te guste tu regalo! 🎁</p>
       <div id="countdown" class="countdown">10</div>
   </div>
 
+  <div class="message-container">
+    <div id="fail-message" class="message-fail">
+      <span class="icon">⚠️</span> ¡Oh no! Has fallado.
+    </div>
+  </div>
+  
+  
+
   
   <div id="duki-screen" class="screen">
-    <h1 class="images-title">𓆩𓆪 ¡Entradas para Duki! 𓆩𓆪 </h1>
+    <h1 class="images-title">𓆩𓆪 ¡Nos vamos a Madrid! 𓆩𓆪 </h1>
         <div class="images">
           <div class="image hidden" id="image1">
             <img class="entrada" src="assets/1.png" alt="Entrada 1">
