--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.3/howler.min.js"></script>
   <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/canvas-confetti"></script>
+  <!-- Icono -->
+  <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
   <!-- Estilos -->
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
