--- a/assets/Regalo de Navidad.html
+++ b/assets/Regalo de Navidad.html
@@ -1,30 +1,30 @@
 <!DOCTYPE html>
-<html lang="es">
-<head>
-  <meta charset="UTF-8">
+<!-- saved from url=(0055)file:///C:/Users/garci/Desktop/proyectojulia/index.html -->
+<html lang="es"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Regalo de Navidad</title>
   <!-- Librerías Externas -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.3/howler.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti"></script>
+  <script src="./Regalo de Navidad_files/howler.min.js.descarga"></script>
+  <script src="./Regalo de Navidad_files/particles.min.js.descarga"></script>
+  <script src="./Regalo de Navidad_files/canvas-confetti"></script>
   <!-- Icono -->
-  <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="file:///C:/Users/garci/Desktop/proyectojulia/assets/favicon.ico">
   <!-- Estilos -->
-  <link rel="stylesheet" href="styles.css">
-  <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./Regalo de Navidad_files/styles.css">
+  <link href="./Regalo de Navidad_files/css2" rel="stylesheet">
 </head>
-<body>
-    <div id="particles-js"></div>
+<body style="transition: opacity 1s ease-in-out; opacity: 1;">
+    <div id="particles-js"><canvas class="particles-js-canvas-el" width="1170" height="2532" style="width: 100%; height: 100%;"></canvas></div>
 
   <!-- Pantalla de Inicio -->
-  <div id="start-screen" class="screen active">
+  <div id="start-screen" class="screen">
     <h1>Una aventura te espera</h1>
     <p>👀 ¿Estás lista para comenzarla? 👀</p>
     <button id="comenzar" onclick="startGame()">Comenzar</button>
   </div>
 
-  <div id="intro-screen" class="screen">
+  <div id="intro-screen" class="screen active" style="display: none;">
     <div class="intro-content">
       <h1 class="intro-title">¡Bienvenida al camino hacia tu regalo!</h1>
       <div id="intro-text" class="intro-text">
@@ -50,8 +50,8 @@
 
   <!-- Pantalla de Preguntas -->
   <div id="question-screen" class="screen">
-    <h1 id="question-title">Pregunta nº1</h1>
-    <p id="question-text">¿En que provincia se encuentran las ciudades Avilés y Pola de Lena?</p>
+    <h1 id="question-title">Pregunta nº 5</h1>
+    <p id="question-text">¿Qué monumento histórico es Santa Cristina de Lena?</p>
     <div class="input-group">
       <input type="text" id="answer-input" name="respuesta" placeholder="Escribe tu respuesta">
       <button class="btn small" onclick="submitAnswer()">Responder</button>
@@ -59,7 +59,7 @@
   </div>
 
   <!-- Pantalla Final -->
-  <div id="final-screen" class="screen">
+  <div id="final-screen" class="screen active">
     <h1>¡Último paso!</h1>
     <p>Ahora ya conoces la respuesta a las 5 preguntas...</p>
     <p>¡Solo te queda descubrir la palabra secreta!</p>
@@ -91,17 +91,18 @@
     <h1 class="images-title">𓆩𓆪 ¡Nos vamos a Madrid! 𓆩𓆪 </h1>
         <div class="images">
           <div class="image hidden" id="image1">
-            <img class="entrada" src="assets/1.png" alt="Entrada 1">
+            <img class="entrada" src="./Regalo de Navidad_files/1.png" alt="Entrada 1">
           </div>
           <div class="image hidden" id="image2">
-            <img class="entrada" src="assets/2.png" alt="Entrada 2">
+            <img class="entrada" src="./Regalo de Navidad_files/2.png" alt="Entrada 2">
           </div>
         </div>
   </div>
 
 
   <!-- Scripts -->
-  <script src="script.js"></script>
+  <script src="./Regalo de Navidad_files/script.js.descarga"></script>
   
-</body>
-</html>
+
+
+</body></html>
