Fix: initial text

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           Debes descubrir la palabra secreta que te permitirá acceder al regalo de Navidad.
         </p>
         <p>
-          🎄 ¿Estás lista para encontrar tu regalo de Navidad? 🎄
+          🎄🎁 ¿Estás lista para encontrar tu regalo? 🎁🎄
         </p>
       </div>
       <button class="button" onclick="startQuestions()">¡Estoy lista!</button>
