Feedback para las preguntas

--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
       <button class="btn small" onclick="submitAnswer()">Responder</button>
     </div>
   </div>
+  
+  <!-- Informacion sobre respuesta a preguntas -->
+  <div class="feedback"></div>
 
   <!-- Pantalla Final -->
   <div id="final-screen" class="screen">
