--- a/index.html
+++ b/index.html
@@ -44,7 +44,13 @@
     </div>
   </div>
   
-
+<!-- Video -->
+  <div id="background-container">
+    <video id="background-video" autoplay loop>
+      <source src="assets/duki.mp4" type="video/mp4">
+      Tu navegador no soporta el elemento de video.
+    </video>
+  </div>
   <!-- Pantalla de Preguntas -->
   <div id="question-screen" class="screen">
     <h1 id="question-title">Pregunta nº1</h1>
