--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>🎉 Feliz cumpleaños 🎉</title>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
-<link rel="icon" type="image/x-icon" href="images/favicon.ico">
+<link rel="icon" type="image/x-icon" href="favicon.ico">
 <style>
   * { box-sizing: border-box; margin: 0; padding: 0; }
   body {
@@ -207,4 +207,5 @@
 
 </body>
 </html>
+
 
